A number of updates, finished moving all email notications to use the screen widget; fixes i18n issues, plus various small improvements
git-svn-id: http://svn.ofbiz.org/svn/ofbiz/trunk@5906 deaff617-5be1-0310-a1b7-ec6878f92ba9

--- a/applications/product/config/ProductUiLabels.properties
+++ b/applications/product/config/ProductUiLabels.properties
@@ -239,6 +239,7 @@ ProductAssociationsToProduct=Associations TO this Product from
 ProductAssocs=Assocs
 ProductAtp=ATP
 ProductAtpQohSerial=ATP/QOH or Serial#
+ProductAttachmentScreenLocation=Attachment Screen Location (XSL-FO)
 ProductAttributes=Attributes
 ProductAutoCreateKeywords=AutoCreateKeywords
 ProductAutoCreateKeywordsForAllProducts=Auto Create Keywords for All Products
