A few quick WorkEffort OrderHeader cleanups, will do more soon
git-svn-id: http://svn.ofbiz.org/svn/ofbiz/trunk@5920 deaff617-5be1-0310-a1b7-ec6878f92ba9

--- a/applications/workeffort/config/WorkEffortUiLabels.properties
+++ b/applications/workeffort/config/WorkEffortUiLabels.properties
@@ -34,7 +34,8 @@ PageTitleEditWorkEffortRequirement=Edit Work Effort Requirement
 PageTitleListWorkEffortRequirements=List Work Effort Requirement
 PageTitleWorkEffortRelatedSummary=Work Effort Related Summary
 PageTitleWorkEffortShopLists=Work Effort Shopping Lists
-
+PageTitleListWorkEffortOrderHeaders=Work Effort Orders
+PageTitleAddWorkEffortOrderHeader=Add Order to Work Effort
 
 PartyAddressLine1=Address Line 1
 PartyAddressLine2=Address Line 2
