Added links in ecommerce to directly create a quote from a cart or a shopping list; refactored permissions in the quote services to allow them to be used also in ecommerce.
git-svn-id: http://svn.ofbiz.org/svn/ofbiz/trunk@5927 deaff617-5be1-0310-a1b7-ec6878f92ba9

--- a/applications/order/config/OrderUiLabels.properties
+++ b/applications/order/config/OrderUiLabels.properties
@@ -53,6 +53,7 @@ OrderCreateOrderQuoteCoefficient = Create New Quote Coefficient
 OrderCreateOrderQuoteItem = Create New Quote Item
 OrderCreateOrderQuoteRole = Create New Quote Role
 OrderCreateQuoteFromCart=Create New Quote From Cart
+OrderCreateQuoteFromShoppingList=Create New Quote
 OrderCreateReturn = Create return
 OrderCreatedBy = Created by
 OrderCurrentStatus = Current Status
