Various additional WorkEffort related cleanups and usability enhancements, especially in the Request and Quote pages but also in the various others as well; other misc cleanups in other places and moved LookupCommEvent screen and related forms from marketing to party component where it makes much more sense
git-svn-id: http://svn.ofbiz.org/svn/ofbiz/trunk@5947 deaff617-5be1-0310-a1b7-ec6878f92ba9

--- a/applications/workeffort/config/WorkEffortUiLabels.properties
+++ b/applications/workeffort/config/WorkEffortUiLabels.properties
@@ -9,31 +9,37 @@ PageTitleMain=Main Page
 PageTitleAddWorkEffort=Add Work Effort
 PageTitleEditWorkEffort=Edit Work Effort
 PageTitleFindWorkEffort=Find Work Effort
-PageTitleListWorkEfforts=List Work Efforts
+PageTitleListWorkEfforts=Work Efforts
 PageTitleTreeWorkEfforts=Child Work Efforts
-PageTitleAddWorkEffortCommEvent=Add Work Effort CommEvent
+PageTitleAddWorkEffortCommEvent=Add Work Effort Communication Event
 PageTitleEditWorkEffortCommEvent=Edit Work Effort CommEvent
-PageTitleListWorkEffortCommEvents=List Work Effort CommEvents
-PageTitleAddWorkEffortPartyAssign=Add Work Effort PartyAssign
-PageTitleEditWorkEffortPartyAssign=Edit Work Effort PartyAssign
-PageTitleListWorkEffortPartyAssigns=List Work Effort PartyAssigns
+PageTitleListWorkEffortCommEvents=Work Effort Communication Events
+PageTitleAddWorkEffortPartyAssign=Add Work Effort Party Assignment
+PageTitleEditWorkEffortPartyAssign=Edit Work Effort Party Assignment
+PageTitleListWorkEffortPartyAssigns=Work Effort Party Assignments
 PageTitleAddWorkEffortQuote=Add Work Effort Quote
 PageTitleEditWorkEffortQuote=Edit Work Effort Quote
-PageTitleListWorkEffortQuotes=List Work Effort Quotes
+PageTitleListWorkEffortQuotes=Work Effort Quotes
 PageTitleAddWorkEffortQuoteItem=Add Work Effort QuoteItem
 PageTitleEditWorkEffortQuoteItem=Edit Work Effort QuoteItem
-PageTitleListWorkEffortQuoteItems=List Work Effort QuoteItems
+PageTitleListWorkEffortQuoteItems=Work Effort QuoteItems
 PageTitleAddWorkEffortRequest=Add Work Effort Request
 PageTitleEditWorkEffortRequest=Edit Work Effort Request
-PageTitleListWorkEffortRequests=List Work Effort Requests
+PageTitleListWorkEffortRequests=Work Effort Requests
 PageTitleAddWorkEffortRequestItem=Add Work Effort RequestItem
 PageTitleEditWorkEffortRequestItem=Edit Work Effort RequestItem
-PageTitleListWorkEffortRequestItems=List Work Effort RequestItems
+PageTitleListWorkEffortRequestItems=Work Effort RequestItems
+
 PageTitleAddWorkEffortRequirement=Add Work Effort Requirement
 PageTitleEditWorkEffortRequirement=Edit Work Effort Requirement
-PageTitleListWorkEffortRequirements=List Work Effort Requirement
+PageTitleListWorkEffortRequirements=Work Effort Requirements
+
 PageTitleWorkEffortRelatedSummary=Work Effort Related Summary
+
+PageTitleListWorkEffortShopLists=Work Effort Shopping Lists
+PageTitleAddWorkEffortShopList=Add Work Effort Shopping List
 PageTitleWorkEffortShopLists=Work Effort Shopping Lists
+
 PageTitleListWorkEffortOrderHeaders=Work Effort Orders
 PageTitleAddWorkEffortOrderHeader=Add Order to Work Effort
 
@@ -195,7 +201,8 @@ WorkEffortResultOfLookup=Result Of Lookup
 WorkEffortRevision=Revision
 WorkEffortSelected=Selected
 WorkEffortSelectContactMechanism=Select an existing contact mechanism
-WorkEffortShopLists=Shop Lists
+WorkEffortShopLists=Shopping Lists
+WorkEffortShopListId=Shopping List ID
 WorkEffortShowActive=Show Active
 WorkEffortShowAllNotes=Show All Notes
 WorkEffortShowThisItemsNotes=Show This Item's Notes
