--- a/framework/common/config/CommonUiLabels.properties
+++ b/framework/common/config/CommonUiLabels.properties
@@ -136,6 +136,7 @@ CommonEnabled=Enabled
 CommonEndDate=End date
 CommonEndDateTime=End Date/Time
 CommonEventDate=EventDate
+CommonExpectation=Expectation
 CommonExpire=Expire
 CommonExpireAll=Expire All
 CommonExpireDate=Expire Date
