--- a/specialized/opentravelsystem/config/CommonUiLabels.properties
+++ b/specialized/opentravelsystem/config/CommonUiLabels.properties
@@ -135,6 +135,7 @@ CommonEmails=Emails
 CommonEnabled=Enabled
 CommonEndDateTime=End Date/Time
 CommonEventDate=EventDate
+CommonExpectation=Expectation
 CommonExpire=Expire
 CommonExpireAll=Expire All 
 CommonExpireDate=Expire Date
