A number of cleanups, missing labels, bad/missing styles, etc; especially focus on the WorkEffort related summary screen which could still use some extensions but has all of the main things that are initially sponsored there, also improved links and such on that page
git-svn-id: http://svn.ofbiz.org/svn/ofbiz/trunk@5948 deaff617-5be1-0310-a1b7-ec6878f92ba9

--- a/applications/party/config/PartyUiLabels.properties
+++ b/applications/party/config/PartyUiLabels.properties
@@ -170,6 +170,8 @@ PartyCreateNewParty=Create New Party Detail
 PartyCreateNewPartyGroup=Create New Party Group
 PartyCreateNewPerson=Create New Person
 PartyCreateNewProspect=Create Prospect
+PartyCreateNewQuote=Create Quote
+PartyCreateNewCustRequest=Create Request for Quote
 PartyCreateNewSecurityGroup=Create New SecurityGroup
 PartyCreateUserLogin=Create UserLogin
 PartyCurrentShoppingCart=Current Shopping Cart
