More WorkEffort cleanups, made the WorkEffortSummary (was ListWorkEffortRelatedSummary) the target in more places and the leftmost item in the WorkEffort tab bar menu, plus more information on the WorkEffortSummary screen
git-svn-id: http://svn.ofbiz.org/svn/ofbiz/trunk@5957 deaff617-5be1-0310-a1b7-ec6878f92ba9

--- a/applications/workeffort/config/WorkEffortUiLabels.properties
+++ b/applications/workeffort/config/WorkEffortUiLabels.properties
@@ -80,7 +80,7 @@ PartyStateProvince=State/Province
 PartyToName=To Name
 PartyZipPostalCode=Zip/Postal Code
 
-WorkEffort=WorkEffort
+WorkEffort=Work Effort
 WorkEffortAcceptAssignment=Accept&nbsp;Assignment
 WorkEffortActivityDetail=Activity Detail
 WorkEffortActivityName=Activity Name
@@ -207,6 +207,7 @@ WorkEffortShowActive=Show Active
 WorkEffortShowAllNotes=Show All Notes
 WorkEffortShowThisItemsNotes=Show This Item's Notes
 WorkEffortStatus=Status
+WorkEffortSummary=Summary
 WorkEffortTask=Task
 WorkEffortTasks=Tasks
 WorkEffortTaskDetail=TaskDetail
