Patch from Yannick Thebault with a bunch of i18n in marketing forms and conversion of some old JSP stuff to modern tools, basically a rewrite; also a few little cleanups while reviewing; Jira #OFBIZ-525
git-svn-id: http://svn.ofbiz.org/svn/ofbiz/trunk@5968 deaff617-5be1-0310-a1b7-ec6878f92ba9

--- a/applications/marketing/config/MarketingUiLabels.properties
+++ b/applications/marketing/config/MarketingUiLabels.properties
@@ -7,27 +7,46 @@ MarketingCompanyName=OFBiz: Marketing Manager
 MarketingCompanySubtitle=Part of the Open For Business Family of Open Source Software
 
 ContactList=Contact List
-ContactListCommEventId=Comm Event Id
-ContactListContactListId=Contact List Id
 ContactListCommEventCreate=Create New Contact List Comm Event
+ContactListCommEventId=Communication Event Id
+ContactListCommEventTypeId=Communication Event Type Id
+ContactListContactListId=Contact List Id
+ContactListContactListName=Contact List Name
+ContactListContactListTypeId=Contact List Type Id
+ContactListContactMechTypeId=Contact Mechanisism Type Id
 ContactListCreate=Create New Contact List
-ContactListPartyCreate=Create New Contact List Party
+ContactListIsPublic=Is Public ?
+ContactListOptInVerifyCode=Opt-In Verify Code
+ContactListOwnerPartyId=Owner Party Id
 ContactListParty=Contact List Party
-SegmentGroupSegmentGroupId=Segment Group Id
-SegmentGroupSegmentGroupTypeId=Segment Group Type Id
-SegmentGroupDescription=Description
-SegmentGroupProductStoreId=Product Store Id
-SegmentGroupCreate=Create New Segment Group
-SegmentGroupClassCreate=Create New Segment Group Classification
-SegmentGroupGeoCreate=Create New Segment Group Geo
-SegmentGroupRoleCreate=Create New Segment Group Role
+ContactListPartyCreate=Create New Contact List Party
+ContactListPartyId=Party Id
+ContactListPreferredContactMech=Preferred Contact Mechanism
+ContactListVerifyEmailFrom=Verify Email From
+ContactListVerifyEmailScreen=Verify Email Screen
+ContactListVerifyEmailSubject=Verify Email Subject
+ContactListVerifyEmailWebSiteId=Verify Email WebSite Id
+MarketingCampaign=Marketing Campaign
+MarketingCampaignCreate=Create Marketing Campaign
+MarketingCampaignId=Marketing Campaign Id
+MarketingCampaignName=Campaign Name
+MarketingCampaignRoleCreate=Create Marketing Campaign Role
+MarketingCampaignSummary=Campaign Summary
+MarketingParentCampaignId=Parent Campaign Id
+MarketingViewPermissionError=View Permission Error
 PageTitleAddContactList=Add Contact List
+PageTitleAddMarketingCampaign=Add New Marketing Campaign
 PageTitleEditContactListCommEvent=Edit Contact List Comm Event
 PageTitleEditContactList=Edit Contact List
 PageTitleEditContactListParty=Edit Contact List Party
+PageTitleEditMarketingCampaign=Edit Marketing Campaign
+PageTitleEditMarketingCampaignRole=Edit Marketing Campaign Role
 PageTitleEditSegmentGroup=Edit Segment Group
 PageTitleFindContactListParty=Find Contact List Parties
+PageTitleFindMarketingCampaignRole=Find Marketing Campaign Role
 PageTitleFindSegmentGroup=Find Segment Group
+PageTitleListMarketingCampaign=List Marketing Campaign
+PageTitleListMarketingCampaignRole=List Marketing Campaign Role
 PageTitleListSegmentGroupClass=List Segment Group Classifications
 PageTitleEditSegmentGroupClass=Edit Segment Group Classification
 PageTitleListSegmentGroupGeo=List Segment Group Geos
@@ -41,16 +60,23 @@ PageTitleLookupContactList=Lookup Contact List
 PageTitleEditSegmentGroupRole=Edit Segment Group Role
 PageTitlePreferredContactMech=Preferred Contact Mechanism
 PageTitleFindContactListCommEvents=Find Associated CommEvents
+SegmentGroupCreate=Create New Segment Group
+SegmentGroupClassCreate=Create New Segment Group Classification
+SegmentGroupGeoAbbr=Abbreviation
+SegmentGroupGeoCode=Code
+SegmentGroupGeoCreate=Create New Segment Group Geo
+SegmentGroupGeoId=Geo ID
+SegmentGroupGeoName=Name
+SegmentGroupGeoSecCode=Secondary Code
+SegmentGroupGeoTypeId=Geo Type ID
+SegmentGroupNoSegmentGroupFoundWithId=No SegmentGroup found with ID:
+SegmentGroupProductStoreId=Product Store Id
+SegmentGroupRoleCreate=Create New Segment Group Role
 SegmentGroupSegmentGroup=Segment
-SegmentGroupSegmentGroupType=Type
 SegmentGroupSegmentGroupClassification=Classification
+SegmentGroupSegmentGroupId=Segment Group Id
+SegmentGroupSegmentGroupType=Type
+SegmentGroupSegmentGroupTypeId=Segment Group Type Id
 SegmentGroupSegmentGroupRole=Role
 SegmentGroupSegmentGroupGeo=Geo
 SegmentGroupSegmentGroupLookup=Find
-SegmentGroupNoSegmentGroupFoundWithId=No SegmentGroup found with ID:
-SegmentGroupGeoId=Geo ID
-SegmentGroupGeoTypeId=Geo Type ID
-SegmentGroupGeoName=Name
-SegmentGroupGeoCode=Code
-SegmentGroupGeoSecCode=Secondary Code
-SegmentGroupGeoAbbr=Abbreviation
