A first pass at the Timesheet implementation, partially complete at this point; also some misc cleanups including removal of old project services
git-svn-id: http://svn.ofbiz.org/svn/ofbiz/trunk@5970 deaff617-5be1-0310-a1b7-ec6878f92ba9

--- a/applications/workeffort/config/WorkEffortUiLabels.properties
+++ b/applications/workeffort/config/WorkEffortUiLabels.properties
@@ -43,6 +43,13 @@ PageTitleWorkEffortShopLists=Work Effort Shopping Lists
 PageTitleListWorkEffortOrderHeaders=Work Effort Orders
 PageTitleAddWorkEffortOrderHeader=Add Order to Work Effort
 
+PageTitleFindTimesheet=Find Timesheet
+PageTitleEditTimesheet=Edit Timesheet
+PageTitleAddTimesheet=Add Timesheet
+
+PageTitleEditTimesheetRoles=Edit Timesheet Roles
+PageTitleEditTimesheetEntries=Edit Timesheet Entries
+
 PartyAddressLine1=Address Line 1
 PartyAddressLine2=Address Line 2
 PartyAddContactInformationParty=Add this contact information to party
@@ -79,6 +86,12 @@ PartySendEmail=Send Email
 PartyStateProvince=State/Province
 PartyToName=To Name
 PartyZipPostalCode=Zip/Postal Code
+
+Timesheet=Timesheet
+TimesheetCreate=Create Timesheet
+TimesheetMyTime=My Time
+TimesheetRateType=Rate Type
+TimesheetTimesheetId=Timesheet ID
 
 WorkEffort=Work Effort
 WorkEffortAcceptAssignment=Accept&nbsp;Assignment
