--- a/framework/common/config/CommonUiLabels.properties
+++ b/framework/common/config/CommonUiLabels.properties
@@ -135,6 +135,8 @@ CommonEmails=Emails
 CommonEnabled=Enabled
 CommonEndDate=End date
 CommonEndDateTime=End Date/Time
+CommonEntry=Entry
+CommonEntries=Entries
 CommonEventDate=EventDate
 CommonExpectation=Expectation
 CommonExpire=Expire
