Added PartyRate screen plus various cleanups in party profile in partymgr; also small rate changes in WorkEffort
git-svn-id: http://svn.ofbiz.org/svn/ofbiz/trunk@5977 deaff617-5be1-0310-a1b7-ec6878f92ba9

--- a/applications/party/config/PartyUiLabels.properties
+++ b/applications/party/config/PartyUiLabels.properties
@@ -55,6 +55,7 @@ PageTitleEditGiftCard=Edit Gift Card
 PageTitleEditGroupInformation=Edit Group Information
 PageTitleEditPartyClassificationGroup=Edit Party Classification Group
 PageTitleEditPartyClassificationGroupParties=Edit Classification Group Parties
+PageTitleEditPartyRates=Edit Party Rates
 PageTitleEditPartyRelationships=Edit Party Relationships
 PageTitleEditPartyTaxInfos=Edit Party Tax Info
 PageTitleEditPersonalInformation=Edit Personal Information
