--- a/framework/common/config/CommonUiLabels.properties
+++ b/framework/common/config/CommonUiLabels.properties
@@ -268,6 +268,8 @@ CommonQuantityUom=Quantity UOM
 CommonQuarter=Quarter
 CommonQuickAdd=Quick Add
 CommonQuickAddList=Quick Add To Shopping List
+CommonRate=Rate
+CommonRates=Rates
 CommonReady=Ready
 CommonReceive=Receive
 CommonReceived=Received
