Fixes a butg.  Now it's possible to lookup both sales and purchase shipments based on status, which have different status ids
git-svn-id: http://svn.ofbiz.org/svn/ofbiz/trunk@5984 deaff617-5be1-0310-a1b7-ec6878f92ba9

--- a/applications/product/config/ProductUiLabels.properties
+++ b/applications/product/config/ProductUiLabels.properties
@@ -222,6 +222,8 @@ ProductAndContainer=AND container
 ProductAndQuantityOnHand=AND quantity OnHand
 ProductAnyFacility=Any Facility
 ProductAnyShipmentStatus=Any Shipment Status
+ProductSalesShipmentStatus=Sales Shipment Status
+ProductPurchaseShipmentStatus=Purchase Shipment Status
 ProductAnyShipmentType=Any Shipment Type
 ProductApplType=Appl Type
 ProductApplyFeaturesFromCategory=Apply Features From Category
