A number of patches from Yannick Thebault to modernize and internationalize various parts of the marketing application, plus added DataSource screens; Jira #OFBIZ-525
git-svn-id: http://svn.ofbiz.org/svn/ofbiz/trunk@6008 deaff617-5be1-0310-a1b7-ec6878f92ba9

--- a/framework/common/config/CommonUiLabels.properties
+++ b/framework/common/config/CommonUiLabels.properties
@@ -70,13 +70,14 @@ CommonBackTo=Back to
 CommonBackToList=Back To List
 CommonBackToOptions=Back to Options
 CommonBenefit=Benefit
+CommonBut=but
 CommonBy=By
-CommonCalendar=Calendar
 CommonCancel=Cancel
 CommonCancelled=Cancelled
 CommonCancelAll=Cancel All
 CommonCancelDone=Cancel/Done
 CommonChange=Change
+CommonChart=Charts
 CommonChecked=Checked
 CommonChecking=Checking
 CommonCheckoutAnonymous=Checkout Without Login
@@ -86,13 +87,13 @@ CommonCity=City
 CommonClear=Clear
 CommonClickHere=Click Here
 CommonClose=Close
-CommonCloseTab=+
+CommonCloseTab=-
 CommonComingSoon=Coming Soon!
 CommonComment=Comment
 CommonComments=Comments
 CommonCompleted=Completed
 CommonConfiguration=Configuration
-CommonContactMechID=Contact Mech ID
+CommonContactMechID=ContactMechId
 CommonContactPurpose=Contact Purpose
 CommonContactUs=Contact Us
 CommonContacts=Contacts
@@ -108,8 +109,6 @@ CommonCreateNew=Create New
 CommonCreated=Created
 CommonCreatedBy=Created By
 CommonCredit=Credit
-CommonCurrency=Currency
-CommonCurrencyUom=Currency UOM
 CommonCurrent=Current
 CommonDatabaseProblem=Database Problem
 CommonDate=Date
@@ -138,7 +137,6 @@ CommonEndDateTime=End Date/Time
 CommonEntry=Entry
 CommonEntries=Entries
 CommonEventDate=EventDate
-CommonExpectation=Expectation
 CommonExpire=Expire
 CommonExpireAll=Expire All
 CommonExpireDate=Expire Date
@@ -208,6 +206,7 @@ CommonMayCreateNewAccountHere=You may create a new account here
 CommonMedium=Medium
 CommonMessage=Message
 CommonMethod=Method
+CommonModify=Modify
 CommonMonday=Monday
 CommonMonth=Month
 CommonMore=More
@@ -228,7 +227,7 @@ CommonNoParent=No Parent
 CommonNoTaskAssigned=No tasks currently require your attention.
 CommonNone=None
 CommonNot=Not
-CommonNotModifRecreat=Cannot change without re-creating
+CommonNotModifRecreat=cannot change without re-creating
 CommonNotSet=Not Set
 CommonNotShown=Not Shown
 CommonNotYetImplemented=Not yet implemented
@@ -242,29 +241,32 @@ CommonOf=of
 CommonOn=On
 CommonOpenNewWindow=Open in New Window
 CommonOpenPageNewWindow=open page in new window
+CommonOpenPageNewW=open the page in new window
 CommonOpenTab=+
 CommonOptions=Options
 CommonOr=OR
 CommonOrder=Order
+CommonOrderBy=Order By
 CommonOrders=Orders
-CommonOther=Other
-CommonOverridesSelection=(overrides either of the above selections)
+CommonOverridesSelection=(overrides either of the above selections.)
 CommonPage=Page
 CommonPartyID=Party Id
 CommonPassword=Password
 CommonPerform=Perform
 CommonPermissionError=Permission Error
 CommonPerson=Person
+CommonPrepared=Prepared
 CommonPrevious=Previous
 CommonPriority=Priority
 CommonProcessing=Processing
 CommonProfile=Profile
+CommonProsPrep=Picking in progress
+CommonProsReci=Receipt in progress
 CommonProvince=Province
 CommonPublish=Publish
 CommonPurpose=Purpose
 CommonQualifier=Qualifier
 CommonQuantity=Quantity
-CommonQuantityUom=Quantity UOM
 CommonQuarter=Quarter
 CommonQuickAdd=Quick Add
 CommonQuickAddList=Quick Add To Shopping List
@@ -276,7 +278,7 @@ CommonReceived=Received
 CommonRed=Red
 CommonRefine=Refine
 CommonRefresh=Refresh
-CommonRegistred=Registered User
+CommonRegistered=Registered User
 CommonRejected=Rejected
 CommonRemove=Remove
 CommonRemoveExpired=Remove Expired
@@ -295,6 +297,7 @@ CommonSavings=Savings
 CommonSearch=Search
 CommonSearchResultfor=Search Results for
 CommonSecurity=Security
+CommonSelect=Select
 CommonSelectAll=Select All
 CommonSelectOne=Select One
 CommonSelected=selected
@@ -329,6 +332,8 @@ CommonSubmit=Submit
 CommonSubmitted=Submitted
 CommonSubtotal=Subtotal
 CommonSunday=Sunday
+CommonSwitchAllTableViewOff=Simple vue
+CommonSwitchAllTableViewOn=Large vue
 CommonTally=Tally
 CommonTellAFriend=Tell-A-Friend
 CommonTest=Test
@@ -353,10 +358,12 @@ CommonToday=Today
 CommonToggle=Toggle
 CommonTotal=Total
 CommonTuesday=Tuesday
-CommonType=Type
 CommonUnitPrice=Unit Price
 CommonUntil=Until
 CommonUom=UOM
+CommonUomUomId=UOM ID
+CommonUomAbbreviation=Abbreviation
+CommonUomDescription=Description
 CommonUpdate=Update
 CommonUpdateLink=Update link
 CommonUpdated=Updated
@@ -388,6 +395,15 @@ CommonYes=Yes
 CommonYouremail=Your email
 CommonZipPostalCode=Zip/Postal Code
 Content=Content
+DataSource=Data Source
+DataSourceCreate=Create Data Source
+DataSourceDataSourceDescription=Description
+DataSourceDataSourceId=Data Source Id
+DataSourceDataSourceTypeId=Data Source Type Id
+DataSourceNoDataSourceFoundWithId=No Data Source Found with ID
+DataSourceType=Data Source Type
+DataSourceTypeCreate=Create Data Source Type
+DataSourceTypeDescription=Description
 Facility=Facility
 Factoids=Did you know?
 Manufacturing=Manufacturing
@@ -395,6 +411,12 @@ Marketing=Marketing
 MostRecentlyViewed=Recently Viewed
 NoUomConversionFound=UOM Conversion Relationship Not Found
 Order=Order
+PageTitleAddDataSource=Add New Data Source
+PageTitleAddDataSourceType=Add New Data Source Type
+PageTitleEditDataSource=Edit Data Source
+PageTitleEditDataSourceType=Edit Data Source Type
+PageTitleListDataSource=List Data Source
+PageTitleListDataSourceType=List Data Source Type
 Party=Party
 PartyContactMechID=Contact Mechanism ID
 PartyContactPurpose=Contact Purpose
