--- a/applications/marketing/config/MarketingUiLabels.properties
+++ b/applications/marketing/config/MarketingUiLabels.properties
@@ -26,42 +26,67 @@ ContactListVerifyEmailFrom=Verify Email From
 ContactListVerifyEmailScreen=Verify Email Screen
 ContactListVerifyEmailSubject=Verify Email Subject
 ContactListVerifyEmailWebSiteId=Verify Email WebSite Id
+
 MarketingCampaign=Marketing Campaign
 MarketingCampaignCreate=Create Marketing Campaign
 MarketingCampaignId=Marketing Campaign Id
 MarketingCampaignName=Campaign Name
 MarketingCampaignRoleCreate=Create Marketing Campaign Role
 MarketingCampaignSummary=Campaign Summary
+MarketingMainPage=Main
+MarketingManagerApplication=Marketing Manager Application
 MarketingParentCampaignId=Parent Campaign Id
 MarketingViewPermissionError=View Permission Error
+
 PageTitleAddContactList=Add Contact List
 PageTitleAddMarketingCampaign=Add New Marketing Campaign
+PageTitleAddTrackingCode=Add New Tracking Code
+PageTitleAddTrackingCodeType=Add New Tracking Code Type
 PageTitleEditContactListCommEvent=Edit Contact List Comm Event
 PageTitleEditContactList=Edit Contact List
 PageTitleEditContactListParty=Edit Contact List Party
 PageTitleEditMarketingCampaign=Edit Marketing Campaign
 PageTitleEditMarketingCampaignRole=Edit Marketing Campaign Role
 PageTitleEditSegmentGroup=Edit Segment Group
+PageTitleEditSegmentGroupClass=Edit Segment Group Classification
+PageTitleEditSegmentGroupGeo=Edit Segment Group Geo
+PageTitleEditSegmentGroupRole=Edit Segment Group Role
+PageTitleEditTrackingCode=Edit Tracking Code
+PageTitleEditTrackingCodeOrder=Edit Tracking Code Order
+PageTitleEditTrackingCodeType=Edit Tracking Code Type
+PageTitleEditTrackingCodeVisit=Edit Tracking Code Visit
 PageTitleFindContactListParty=Find Contact List Parties
 PageTitleFindMarketingCampaignRole=Find Marketing Campaign Role
 PageTitleFindSegmentGroup=Find Segment Group
+PageTitleFindContactListCommEvents=Find Associated CommEvents
+PageTitleFindTrackingCodeOrder=Find Tracking Code Orders
+PageTitleFindTrackingCodeVisits=Find Tracking Code Visits
 PageTitleListMarketingCampaign=List Marketing Campaign
 PageTitleListMarketingCampaignRole=List Marketing Campaign Role
 PageTitleListSegmentGroupClass=List Segment Group Classifications
-PageTitleEditSegmentGroupClass=Edit Segment Group Classification
 PageTitleListSegmentGroupGeo=List Segment Group Geos
-PageTitleEditSegmentGroupGeo=Edit Segment Group Geo
 PageTitleListContactListCommEvent=List Contact List Comm Events
 PageTitleListContactList=List Contact List
+PageTitleListContactListCommEvent=List Contact List Comm Events
 PageTitleListContactListParty=List Contact List Parties
 PageTitleListSegmentGroupRole=List Segment Group Roles
+PageTitleListTrackingCode=List Tracking Code
+PageTitleListTrackingCodeOrder=List Tracking Code Order
+PageTitleListTrackingCodeOrdersFor=List Tracking Code Order for
+PageTitleListTrackingCodeType=List Tracking Code Type
+PageTitleListTrackingCodeVisit=List Tracking Code Visit
+PageTitleListTrackingCodeFor=List Tracking Code Visit for
 PageTitleLookupCommEvent=Lookup Communication Event
 PageTitleLookupContactList=Lookup Contact List
-PageTitleEditSegmentGroupRole=Edit Segment Group Role
+PageTitleLookupTrackingCode=Lookup Tracking Code
+PageTitleLookupTrackingCodeType=Lookup Tracking Code Type
+PageTitleLookupVisit=Lookup Visit
 PageTitlePreferredContactMech=Preferred Contact Mechanism
-PageTitleFindContactListCommEvents=Find Associated CommEvents
+
+Segment=Segment
 SegmentGroupCreate=Create New Segment Group
 SegmentGroupClassCreate=Create New Segment Group Classification
+SegmentGroupDescription=Description
 SegmentGroupGeoAbbr=Abbreviation
 SegmentGroupGeoCode=Code
 SegmentGroupGeoCreate=Create New Segment Group Geo
@@ -80,3 +105,39 @@ SegmentGroupSegmentGroupTypeId=Segment Group Type Id
 SegmentGroupSegmentGroupRole=Role
 SegmentGroupSegmentGroupGeo=Geo
 SegmentGroupSegmentGroupLookup=Find
+
+Tracking=Tracking
+TrackingCode=Tracking Code
+TrackingCodeBillableLifetime=Billable Lifetime
+TrackingCodeComments=Comments
+TrackingCodeCreate=Create Tracking Code
+TrackingCodeDefaultProdCatalogId=Default Product Catalog Id
+TrackingCodeDescription=Description
+TrackingCodeGroupId=Group Id
+TrackingCodeInSeconds=Seconds
+TrackingCodeNoOverrideIfEmpty=No override (co-brand) if empty
+TrackingCodeNoRedirectIfEmpty=No redirect if empty
+TrackingCodeOrder=Tracking Code Orders
+TrackingCodeOrderIsBilliable=Is Billable ?
+TrackingCodeOrderOrderId=Order Id
+TrackingCodeOverrideCss=Override CSS URL
+TrackingCodeOverrideLogo=Override Logo URL
+TrackingCodeRedirectUrl=Redirect URL
+TrackingCodeSubgroupId=Sub-Group Id
+TrackingCodeTrackableLifetime=Trackable Lifetime
+TrackingCodeTrackingCodeId=Tracking Code Id
+TrackingCodeTrackingCodeTypeId=Tracking Code Type Id
+TrackingCodeType=Tracking Code Type
+TrackingCodeTypeCreate=Create Tracking Code Type
+TrackingCodeTypeDescription=Description
+TrackingCodeVisit=Tracking Code Visits
+TrackingCodeVisitClientHostName=Client Hostname
+TrackingCodeVisitClientIpAddress=Client IP Address
+TrackingCodeVisitContactMechTypeId=Contact Mechanism Type
+TrackingCodeVisitPartyId=Party Id
+TrackingCodeVisitRoleTypeId=Role Type Id
+TrackingCodeVisitSessionId=Session Id
+TrackingCodeVisitSourceEnumId=Source Id
+TrackingCodeVisitVisitId=Visit Id
+TrackingCodeVisitVisitorId=Visitor Id
+TrackingCodeVisitWebappName=Webapp Name
