Cleaned up some missing Lookup request/view defs reported by Les Austin, also redid the RequestItem WorkEfforts page which didn't really make any sense at all; also cleaned up the Request and RequestItem tab bar with slightly better labels and the item stuff on a different row to make it less confusing
git-svn-id: http://svn.ofbiz.org/svn/ofbiz/trunk@6016 deaff617-5be1-0310-a1b7-ec6878f92ba9

--- a/applications/order/config/OrderUiLabels.properties
+++ b/applications/order/config/OrderUiLabels.properties
@@ -222,6 +222,7 @@ OrderRemainingSubTotal = Remaining SubTotal
 OrderRequest = Request
 OrderRequestCreatedDate=Created Date
 OrderRequestDate=Request Date
+OrderRequestItem=Request Item
 OrderRequestItems = Request Items
 OrderRequestLastModifiedDate=Last Modified Date
 OrderRequestList = Request List
