--- a/applications/workeffort/config/WorkEffortUiLabels.properties
+++ b/applications/workeffort/config/WorkEffortUiLabels.properties
@@ -94,6 +94,7 @@ TimesheetRateType=Rate Type
 TimesheetTimesheetId=Timesheet ID
 
 WorkEffort=Work Effort
+WorkEfforts=Work Efforts
 WorkEffortAcceptAssignment=Accept&nbsp;Assignment
 WorkEffortActivityDetail=Activity Detail
 WorkEffortActivityName=Activity Name
