Modified the product lookup link in the "edit quote item" form to call the ProductAndPrice lookup instead of the Product lookup screen. Obviously, this can be easily changed back; however it would be interesting to add the ability to specify more than one lookup link for a field in the form widget definition.
git-svn-id: http://svn.ofbiz.org/svn/ofbiz/trunk@6020 deaff617-5be1-0310-a1b7-ec6878f92ba9

--- a/applications/order/config/OrderUiLabels.properties
+++ b/applications/order/config/OrderUiLabels.properties
@@ -298,6 +298,7 @@ OrderViewImage = View Image
 OrderViewOrder = View Order
 OrderViewPermissionError = You do not have permission to view this page.
 OrderViewQuote=View Quote
+OrderViewQuoteProfit=Profit
 OrderViewRequest=View Request
 OrderWaitingApproval=Waiting Approval
 OrderWaitingCompletion=Waiting Completion
