Implemented the copy of an existing cust request item (with the option of copying linked quotes as well).
git-svn-id: http://svn.ofbiz.org/svn/ofbiz/trunk@6024 deaff617-5be1-0310-a1b7-ec6878f92ba9

--- a/applications/order/config/OrderUiLabels.properties
+++ b/applications/order/config/OrderUiLabels.properties
@@ -41,6 +41,7 @@ OrderCompanySubtitle = Part of the Open For Business Family of Open Source Softw
 OrderCompleted=Completed
 OrderCompleteOrder = Complete Order
 OrderContactInformation = Contact Information
+OrderCopyCustRequestItem=Duplicate Request Item
 OrderCopyQuote=Duplicate Quote
 OrderCreateCustRequestFromCart=Create a Request For Quote
 OrderCreateCustRequestFromShoppingList=Create a Request For Quote
