New screens for manually authorizing and capturing order payments and viewing gateway responses, OFBIZ-532
git-svn-id: http://svn.ofbiz.org/svn/ofbiz/trunk@6025 deaff617-5be1-0310-a1b7-ec6878f92ba9

--- a/applications/accounting/config/AccountingUiLabels.properties
+++ b/applications/accounting/config/AccountingUiLabels.properties
@@ -42,6 +42,7 @@ AccountingAnyInvoiceStatus=Any Invoice Status
 AccountingAnyPaymentMethod=Any Payment Method
 AccountingAnyPaymentStatus=Any Payment Status
 AccountingAssets=Assets
+AccountingAuthorize=Authorize
 AccountingBalanceSheet=Balance Sheet
 AccountingBankName=Bank Name
 AccountingBilling=Billing
@@ -56,6 +57,7 @@ AccountingBillingContactMechId=Billing Contact Mech
 AccountingBillingInformation=AccountingBilling Information
 AccountingBillingMenu=Billing Accounts
 AccountingBillUpTo=Bill-Up To
+AccountingCapture=Capture
 AccountingCardNumber=Card Number
 AccountingCardType=Card Type
 AccountingChartOfAcctsMenu=Chart of Accounts
@@ -109,6 +111,8 @@ AccountingFixedAssets=Fixed Assets
 AccountingFromParty=From Party
 AccountingFromPartyId=From Party ID
 AccountingFX=Foreign Exchange Rates
+AccountingGatewayResponse=Gateway Response
+AccountingGatewayResponses=Gateway Responses
 AccountingGlAcc=GL Account
 AccountingHideFields=Hide Fields
 AccountingIncomeStatement=Income Statement
@@ -139,7 +143,7 @@ AccountingMainPageNote=Welcome to the Accounting Manager!
 AccountingManagerApplication=Accounting Manager Application
 AccountingManualJournalEntry=Manual Journal Entry
 AccountingManualPostTrans=Manual Transactions Posting
-AccountingManualTxMenu=Manual Tx
+AccountingManualTransaction=Manual Transaction
 AccountingMethod=Method
 AccountingMiddleNameCard=Middle Name on Card
 AccountingNameAccount=Name on Account
@@ -198,6 +202,7 @@ AccountingTaxSummary=Tax Summary Report
 AccountingTermTypeId=Term Type Id
 AccountingTextData=Text Data
 AccountingThruDate=Thru Date
+AccountingTransactions=Transactions
 AccountingTrialBalance=Trial Balance
 AccountingToParty=To Party
 AccountingToPartyId=To Party Id
