Added WorkEffort AssignmentRate and TimeEntry screens, plus some cleanups in related screens and service
git-svn-id: http://svn.ofbiz.org/svn/ofbiz/trunk@6029 deaff617-5be1-0310-a1b7-ec6878f92ba9

--- a/applications/workeffort/config/WorkEffortUiLabels.properties
+++ b/applications/workeffort/config/WorkEffortUiLabels.properties
@@ -14,9 +14,14 @@ PageTitleTreeWorkEfforts=Child Work Efforts
 PageTitleAddWorkEffortCommEvent=Add Work Effort Communication Event
 PageTitleEditWorkEffortCommEvent=Edit Work Effort CommEvent
 PageTitleListWorkEffortCommEvents=Work Effort Communication Events
+
 PageTitleAddWorkEffortPartyAssign=Add Work Effort Party Assignment
 PageTitleEditWorkEffortPartyAssign=Edit Work Effort Party Assignment
 PageTitleListWorkEffortPartyAssigns=Work Effort Party Assignments
+
+PageTitleListWorkEffortAssignmentRates=Work Effort Assignment Rates
+PageTitleAddWorkEffortAssignmentRate=Add Work Effort Assignment Rate
+
 PageTitleAddWorkEffortQuote=Add Work Effort Quote
 PageTitleEditWorkEffortQuote=Edit Work Effort Quote
 PageTitleListWorkEffortQuotes=Work Effort Quotes
@@ -42,6 +47,9 @@ PageTitleWorkEffortShopLists=Work Effort Shopping Lists
 
 PageTitleListWorkEffortOrderHeaders=Work Effort Orders
 PageTitleAddWorkEffortOrderHeader=Add Order to Work Effort
+
+PageTitleListWorkEffortTimeEntries=Work Effort Time Entries
+PageTitleAddWorkEffortTimeEntry=Add Time Entry to Work Effort
 
 PageTitleFindTimesheet=Find Timesheet
 PageTitleEditTimesheet=Edit Timesheet
@@ -90,8 +98,11 @@ PartyZipPostalCode=Zip/Postal Code
 Timesheet=Timesheet
 TimesheetCreate=Create Timesheet
 TimesheetMyTime=My Time
+TimesheetRates=Rates
 TimesheetRateType=Rate Type
 TimesheetTimesheetId=Timesheet ID
+TimesheetTimeEntries=Time Entries
+TimesheetTimeEntry=Time Entry
 
 WorkEffort=Work Effort
 WorkEfforts=Work Efforts
