--- a/framework/common/config/CommonUiLabels.properties
+++ b/framework/common/config/CommonUiLabels.properties
@@ -137,6 +137,7 @@ CommonEndDateTime=End Date/Time
 CommonEntry=Entry
 CommonEntries=Entries
 CommonEventDate=EventDate
+CommonExpectation=Expectation
 CommonExpire=Expire
 CommonExpireAll=Expire All
 CommonExpireDate=Expire Date
