Created a new screen widget and some new controller request maps so that we can reuse the quickcheckout screen from ecommerce in order manager.  Not all of these links work, however, because of the way the ecommerce services are coded: they get the partyId from the userLogin, which is incompatible with the order manager.  This will have to be fixed over time
git-svn-id: http://svn.ofbiz.org/svn/ofbiz/trunk@6051 deaff617-5be1-0310-a1b7-ec6878f92ba9

--- a/applications/order/config/OrderUiLabels.properties
+++ b/applications/order/config/OrderUiLabels.properties
@@ -209,6 +209,7 @@ OrderPurchaseOrder = Purchase Order
 OrderQuantity = Quantity
 OrderQuantityUom = Unity of measure
 OrderQuickAddOrderItem=Order Item Quick Add
+OrderQuickFinalizeOrder=Quick Finalize Order
 OrderQuickRefundEntireOrder = Quick Refund Entire Order
 OrderQuickShipEntireOrder = Quick Ship Entire Order
 OrderRecalculateOrder = Recalculate Order
