Quick lookup button for products during order entry.  Does a case-insensitive search based for all items which begin with a productId.  OFBIZ-540
git-svn-id: http://svn.ofbiz.org/svn/ofbiz/trunk@6060 deaff617-5be1-0310-a1b7-ec6878f92ba9

--- a/applications/order/config/OrderUiLabels.properties
+++ b/applications/order/config/OrderUiLabels.properties
@@ -210,6 +210,7 @@ OrderQuantity = Quantity
 OrderQuantityUom = Unity of measure
 OrderQuickAddOrderItem=Order Item Quick Add
 OrderQuickFinalizeOrder=Quick Finalize Order
+OrderQuickLookup=Quick Lookup
 OrderQuickRefundEntireOrder = Quick Refund Entire Order
 OrderQuickShipEntireOrder = Quick Ship Entire Order
 OrderRecalculateOrder = Recalculate Order
