New feature which automatically creates a shipment of all purchase order items and takes the user directly to the receive items screen in facility manager.  Involved a re-factoring of code from quickShipEntireOrder to new sub-methods
git-svn-id: http://svn.ofbiz.org/svn/ofbiz/trunk@6066 deaff617-5be1-0310-a1b7-ec6878f92ba9

--- a/applications/order/config/OrderUiLabels.properties
+++ b/applications/order/config/OrderUiLabels.properties
@@ -211,6 +211,7 @@ OrderQuantityUom = Unity of measure
 OrderQuickAddOrderItem=Order Item Quick Add
 OrderQuickFinalizeOrder=Quick Finalize Order
 OrderQuickLookup=Quick Lookup
+OrderQuickReceivePurchaseOrder = Quick Receive Purchase Order
 OrderQuickRefundEntireOrder = Quick Refund Entire Order
 OrderQuickShipEntireOrder = Quick Ship Entire Order
 OrderRecalculateOrder = Recalculate Order
