A few cleanups and fixes; changed editcontactmech.bash to use parameters.get instead of request.getParameter (which we need to do in lots more places); fixed a few problems in the Party SegmentGroup area
git-svn-id: http://svn.ofbiz.org/svn/ofbiz/trunk@6073 deaff617-5be1-0310-a1b7-ec6878f92ba9

--- a/applications/party/config/PartyUiLabels.properties
+++ b/applications/party/config/PartyUiLabels.properties
@@ -338,7 +338,7 @@ PartySecurityGroups=Security Groups
 PartySecurityGroupId=Security Group ID
 PartySecurityGroupsList=SecurityGroups List
 PartySecurityViewPermissionError=PartySecurityViewPermissionError You do not have permission to view this page. ("SECURITY_VIEW" or "SECURITY_ADMIN" needed)
-PartySegmentGroupId=Segment Id
+PartySegmentGroupId=Segment Group Id
 PartySegmentGroupTypeId=Segment Type Id
 PartySegmentGroupProductStoreId=Product Store Id
 PartySegments=Segments
