Implemented initial TaxAuthority data maintenance user interfaces in the accounting application; still need to add a tab on the ProductStore side in the catalog manager; also still working on the implementation of the new tax calc services and UI changes based on this, including VAT or tax included support; once that is done will remove or rather temporarily comment it out of the services, UIs, etc until we are sure we are ready to toss it
git-svn-id: http://svn.ofbiz.org/svn/ofbiz/trunk@6081 deaff617-5be1-0310-a1b7-ec6878f92ba9

--- a/applications/accounting/config/AccountingUiLabels.properties
+++ b/applications/accounting/config/AccountingUiLabels.properties
@@ -7,6 +7,8 @@ en=English
 fr=French
 de=Deutch
 
+AccountingPermissionError=Security Error\: to run ${methodShortDescription} you must have the ACCOUNTING${securityAction} or ACCOUNTING_ADMIN permission
+
 AcctgGlPartyLabel=GL Party : 
 AcctgGlAcctLabel=GL Account : 
 AcctgEditGlJournalEntry=Journal Entry
@@ -114,6 +116,11 @@ AccountingFX=Foreign Exchange Rates
 AccountingGatewayResponse=Gateway Response
 AccountingGatewayResponses=Gateway Responses
 AccountingGlAcc=GL Account
+AccountingGlAccs=GL Accounts
+AccountingGlAccount=GL Account
+AccountingGlAccounts=GL Accounts
+AccountingGlAccountClass=GL Account Class
+AccountingGlAccountId=GL Account ID
 AccountingHideFields=Hide Fields
 AccountingIncomeStatement=Income Statement
 AccountingInformation=Information
@@ -155,6 +162,8 @@ AccountingNewAgreementTerm=Create Agreement Term
 AccountingNewFixedAsset=New Fixed Asset
 AccountingNewFixedAssetStdCost=New Standard Cost
 AccountingNewPayment=New Payment
+AccountingNewTaxAuthority=New Tax Authority
+AccountingNewTaxAuthorityPartyInfo=New Tax Authority Party Info
 AccountingNoAccount=No Account
 AccountingNoBillingAccount=No Billing Account
 AccountingNoBillingAccountFound=No billing accounts found.
@@ -198,10 +207,13 @@ AccountingRoleTypeIdFrom=Role Type Id From
 AccountingRoleTypeIdTo=Role Type Id To
 AccountingRoutingNumber=Routing Number
 AccountingSuffixCard=Suffix on Card
+AccountingTaxAuthorities=Tax Authorities
+AccountingTaxAuthority=Tax Authority
 AccountingTaxSummary=Tax Summary Report
 AccountingTermTypeId=Term Type Id
 AccountingTextData=Text Data
 AccountingThruDate=Thru Date
+AccountingTitleTransfer=Title Transfer
 AccountingTransactions=Transactions
 AccountingTrialBalance=Trial Balance
 AccountingToParty=To Party
@@ -231,6 +243,20 @@ PageTitleLogin=Login
 PageTitleLookupFixedAsset=Lookup Fixed Asset
 PageTitleLookupProduct=Lookup Product
 PageTitleMain=Main Page
+
+PageTitleFindTaxAuthority=Find Tax Authority
+PageTitleEditTaxAuthority=Edit Tax Authority
+PageTitleEditTaxAuthorityCategories=Edit Tax Authority Product Categories
+PageTitleAddTaxAuthorityCategory=Add Tax Authority Product Category
+PageTitleEditTaxAuthorityAssocs=Edit Tax Authority Associations
+PageTitleAddTaxAuthorityAssoc=Add Tax Authority Association
+PageTitleEditTaxAuthorityGlAccounts=Edit Tax Authority GL Accounts
+PageTitleAddTaxAuthorityGlAccount=Add Tax Authority GL Account
+PageTitleEditTaxAuthorityRateProducts=Edit Tax Authority Product Rates
+PageTitleAddTaxAuthorityRateProduct=Add Tax Authority Product Rate
+PageTitleListTaxAuthorityParties=List Tax Authority Parties
+PageTitleEditTaxAuthorityPartyInfo=Edit Tax Authority Party Info
+
 PartyPartyId=Party ID
 PartyRoles=Roles
 PartyRoleTypeId=RoleType ID
