--- a/applications/party/config/PartyUiLabels.properties
+++ b/applications/party/config/PartyUiLabels.properties
@@ -271,6 +271,8 @@ PartyNoSupplier=No Supplier
 PartyNotModifRecreatSecurityGroup=This cannot be changed without re-creating the securityGroup.
 PartyNoUserLogin=No UserLogin(s) found for this party.
 PartyNoVisitFound=No Visit(s) found for this party.
+PartyOrganizationParty=Organization Party
+PartyOrganizationPartyId=Organization Party ID
 PartyPagePushFollowing=Page Push/Following
 PartyParentList=Parent List
 PartyParties=Parties
