--- a/framework/common/config/CommonUiLabels.properties
+++ b/framework/common/config/CommonUiLabels.properties
@@ -59,6 +59,7 @@ CommonApproved=Approved
 CommonArea=Area
 CommonAreaCode=Area Code
 CommonAssociate=Associate
+CommonAssocs=Associations
 CommonAt=At
 CommonAttentionName=Attention Name
 CommonAttn=Attn
@@ -359,6 +360,7 @@ CommonToday=Today
 CommonToggle=Toggle
 CommonTotal=Total
 CommonTuesday=Tuesday
+CommonType=Type
 CommonUnitPrice=Unit Price
 CommonUntil=Until
 CommonUom=UOM
